# mpalg

./: CMakeLists.txt  LICENSE  README.md
src/: .clang-format  CMakeLists.txt  lamp.cpp  mds.cpp  mp.h
test/: CMakeLists.txt  main.cpp
